--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   synchronized: 2.2.0+2
   url_launcher: 5.7.2
   uuid: 2.2.2
+  user_route_tracking:
+    git:
+      url: https://github.com/trufi-association/user_route_tracking
+      ref: 906e8d5dadb2c1f56a5b18a4639573be88f20945
 
 dev_dependencies:
   flutter_driver:
