--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
     path: ../
 
   global_configuration: 1.5.0
+  user_route_tracking:
+    git:
+      url: https://github.com/trufi-association/user_route_tracking
+      ref: 97146a1000f426569f406d0ceb33a198a202d2e6  
 
 dev_dependencies:
   flutter_test:
